resolve merge conflicts

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
       <td>Jul 2012 – Apr 2013</td>
       <td>Assistant Teacher</td>
       <td>SMC English School, Washim</td>
-      <td>I used proven teaching, guidance, and counseling skills. Possessed a strong track record in improving test scores and teaching effectively. Communicated complex information in a simple and entertaining manner.
-        Responsibilities Involved
+      <td>I used proven teaching, guidance, and counseling skills. Possessed a strong track record in improving test scores and teaching effectively. Communicated complex information in a simple and entertaining manner. Responsibilities Involved
         <ul>
           <li>Design, facilitate, and teach the computer instruction component.</li>
           <li>Guided students to create project reports with schedule & assured on-time delivery.</li>
