upade tech stack

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <tr>
       <td>Jenkins</td>
       <td>★★★☆☆</td>
-      <td>Jennifer</td>
+      <td>Robot Framework</td>
       <td>★★☆☆☆</td>
       <td>Waterfall</td>
       <td>★★★★☆</td>
