add contact info

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>Priya Wankhade</h1>
         <p><em>Coding Enthusiast | Love Dance | Travelling</em></p>
         <p>I ♥ coding, music, dance and travelling. Knowledge of Web Development technologies & certified in <a href="https://www.sololearn.com/Profile/17534291/Python">Python</a></p>
+        <p><b>Email:</b> pwwankhade@gmail.com | <b>Mobile:</b> +81-7085-004-276</p>
       </td>
     </tr>
   </table>
